--- a/ContactPage.html
+++ b/ContactPage.html
@@ -327,7 +327,7 @@ body {
           
           function appendButtons() {
             var buttonsHtml = '<div id="action-buttons" style="margin-top: 20px; text-align: center;">' +
-                              '<button class="glow-button" onclick="location.href=\'mailto:robvoiles@example.com\';">Email Me</button>' +
+                              '<button class="glow-button" onclick="location.href=\'mailto:robvoiles@gmail.com\';">Email Me</button>' +
                               '&nbsp;' +
                               '<button class="glow-button" onclick="location.href=\'sms:+18656356689\';">Text Me</button>' +
                               '&nbsp;' +
