--- a/ContactPage.html
+++ b/ContactPage.html
@@ -439,9 +439,9 @@ body {
 
 function appendButtons() {
         var buttonsHtml = '<div id="action-buttons" style="margin-top: 20px; text-align: center;">' +
-                          '<button class="cybr-btn" onclick="location.href=\'mailto:robvoiles@gmail.com\';"><span class="cybr-btn__glitch">Email Me</span><span class="cybr-btn__tag"></span>Email Me</button>' +
+                          '<button class="cybr-btn" onclick="location.href=\'mailto:robvoiles@gmail.com\';"><span class="cybr-btn__glitch">Email</span><span class="cybr-btn__tag"></span>Email Me</button>' +
                           '&nbsp;' +
-                          '<button class="cybr-btn" onclick="location.href=\'sms:+18656356689\';"><span class="cybr-btn__glitch">Text Me</span><span class="cybr-btn__tag"></span>Text Me</button>' +
+                          '<button class="cybr-btn" onclick="location.href=\'sms:+18656356689\';"><span class="cybr-btn__glitch">Text Me</span><span class="cybr-btn__tag"></span>Text</button>' +
                           '&nbsp;' +
                           '<button class="cybr-btn" onclick="location.href=\'RobV.vcf\';"><span class="cybr-btn__glitch">Add to Contacts</span><span class="cybr-btn__tag"></span>Add to Contacts</button>' +
                           '</div>';
